objects/Teacher__c.object
<CustomObject>
    <description>Teacher</description>
    <label>Teacher</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Teacher ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher_Name__c</fullName>
        <description>Teacher Name</description>
        <inlineHelpText>Teacher Name</inlineHelpText>
        <label>Teacher Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
</CustomObject>